--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.2.0
+  shared_preferences: ^2.0.17
 
 
   # The following adds the Cupertino Icons font to your application.
